# 99-ML-Learning-Projects

./: .gitignore  pyproject.toml
001/exercise/: starter-notebook.ipynb  titanic.ipynb
